// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders correctly with headers and content 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  cursor: pointer;
  font-family: heading;
  text-transform: uppercase;
  text-align: center;
  font-size: 12px;
  font-weight: 600;
  line-height: 16px;
}

.c1 * {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #EBA49A;
}

.c1 a {
  display: block;
  width: 148px;
  height: 52px;
  line-height: 52px;
}

.c1 a > *:first-child {
  margin-right: 10px;
}

<div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      One
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      Two
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      Three
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      Four
    </div>
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 10px;
}

<div
    className="c0"
  />,
]
`;

exports[`Tabs renders correctly with only headers 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  cursor: pointer;
  font-family: heading;
  text-transform: uppercase;
  text-align: center;
  font-size: 12px;
  font-weight: 600;
  line-height: 16px;
}

.c1 * {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #EBA49A;
}

.c1 a {
  display: block;
  width: 148px;
  height: 52px;
  line-height: 52px;
}

.c1 a > *:first-child {
  margin-right: 10px;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    One
  </div>
  <div
    className="c1"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    Two
  </div>
  <div
    className="c1"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    Three
  </div>
  <div
    className="c1"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    Four
  </div>
</div>
`;

exports[`Tabs renders correctly with variant default 1`] = `ShallowWrapper {}`;
